ckanext/rvr/assets/css/rvr.css
/* ... */
.link {
    color: #00847d;
    position: relative;
    font-family: "Montserrat-Regular,Verdana,Arial,sans-serif";
}
.label {
    white-space: normal!important;
    padding-top: 0.3em;
    padding-right: 0.6em;
    padding-bottom: 0.3em;
    padding-left: 0.6em;
}
.a {
    background-color: transparent;
}

h4 {
    /* font-size: 0.875rem; */
    margin-bottom: 0.625rem;
    margin-top: 0;
    text-transform: uppercase;
    font-weight: 700;
    font-family: "Montserrat-Bold,Helvetica,Arial,sans-serif";
    letter-spacing: 0.5px;
    hyphens: auto;  
}


/* #################################################### Main Content ############################################## */
body{
    background: #00847d url("../../../base/images/bg.png");
    max-width: 100%;
}
div.hero{
    background: none;
    background-color: #e8e8eb;
}


@media (min-width: 992px){
    html.js body div.hero div.container.content div.row.row1 div.searchbox-mobile{
        visibility: hidden;
        display: none;
       
     }

     
}

html.js body div.hero div.container.content div.row.row1 div.searchbox-mobile{
    margin-top: 5%;
    margin-bottom: 10%;
}

@media (max-width: 991px){
    div.row.row1 div.col-md-6.col2.block2 div.searchbox-desktop {
        visibility: hidden;
        display: none;
    }

    .masthead .site-search {
        display: inline;
    }
}

@media(min-width:992px){
    .masthead .site-search {

        margin-left: 4px;
    
    }
}


/* @media (min-width:1200px) {
    header.navbar.navbar-static-top.masthead div.container{
       width:1600px;
   }
} */
/* 
.container.content{
     width: 100%;
 } */


 .block1{
    padding-left: 3%;
    padding-top: 1%;
 }

 .block2{
    padding-left: 3%;
    padding-top: 1%;

}


 th,td{
    padding-left: 40px;
}

.col2.block2{
    position: relative !important;
    display: flexbox;

    margin-top: calc( 1px); 
}



.filter-title h3 {
    padding: 12px 0 12px 12px;
    margin: 0;
}


.module-heading[data-toggle="collapse"]  {
    cursor: pointer;
}

.module-heading .action {
    padding-right: 12px;
}

.module-subheading {
    font-size: 13px;
    padding: 6px 0px;
    margin: 0;
}

.module-content.box.box1{
    /* margin-right: 0;
    margin-left: 5%;
    margin-bottom: 10%; */
    box-shadow: none;
    position: relative;
}

div.module-content.box.box1::before{
    content: "";
    position: absolute;
    top: 0rem;
    right: 0rem;
  
    z-index: 0;

    width: 0; height: 0; border-top: 60px solid black; border-left: 60px solid transparent;
}

.module-content.box.box2{
    /* margin-right:0;
    margin-left: 5%;*/
    margin-top: 10%; 
    
    box-shadow: none;
    position: relative;
}


div.module-content.box.box2::before{
    content: "";
    position: absolute;
    top: 0rem;
    right: 0rem;
    z-index: 0;
    width: 0; height: 0; border-top: 60px solid black; border-left: 60px solid transparent;
}

.module-search.module-narrow.module-shallow.box{
    padding:0;
    box-shadow: none;
    border:none;
}

form.module-content.search-form h3.heading{
    color:white;
}

form.module-content{
    background-color: #00847d;
    position: relative;
}


form.module-content::before{
    content: "";
    position: absolute;
    top: -0.02rem;
    right: -0.02rem;
    height: 0rem;
    width: 13.375rem;
    z-index: 0;
    /* background-color: #e8e8eb;
    -webkit-transform: rotate(45deg);
    transform: rotate(45deg); */
    width: 0; height: 0; border-top: 60px solid#e8e8eb; border-left: 60px solid transparent;
}


.module-content.box.dataset{
    margin-top: 6.66%;
    box-shadow: none;
    position: relative;
}

div.module-content.box.dataset::before{
    content: "";
    position: absolute;
    top: 0rem;
    right: 0rem;
    z-index: 0;
    /* background-color: #e8e8eb;
    -webkit-transform: rotate(45deg);
    transform: rotate(45deg); */
    width: 0; height: 0; border-top: 60px solid black; border-left: 60px solid transparent;
}

.module-content.box.statistic{
    margin-top: 6.66%;
    box-shadow: none;
    position: relative;
}


div.module-content.box.statistic::before{
    content: "";
    position: absolute;
    top: 0rem;
   right: 0rem;
  
    z-index: 0;
    /* background-color: #e8e8eb;
    -webkit-transform: rotate(45deg);
    transform: rotate(45deg); */
    width: 0; height: 0; border-top: 60px solid black; border-left: 60px solid transparent;
}
 
div.module-content.box.statistic, div.module-content.box.statistic{
    -webkit-box-shadow: none;
}

div.module-content.box.statistic ul{
     font-size: 16px;
     width: 100%;
     font-weight: 300;
     display: inline-flex;
     text-align: center;
     padding-left: 1px;
    
}

div.module-content.box.statistic ul::after {
    display: table;
    content: "";
    line-height: 0;
}

div.module-content.box.statistic ul li{
    margin:5%;
}

div.module-content.box.statistic ul li a strong{
    display: block;
}

@media (max-width: 1308px){
    div.module-content.box.statistic ul{
        display: contents;
    }
    div.module-content.box.statistic ul li a strong span{
        font-size:28px!important;
    }
    div.module-content.box.statistic ul li a{
       font-size:16px!important;
   }
}

@media (max-width: 991px) and (min-width: 634px){
    div.module-content.box.statistic div.inner ul{
        display: inline-flex;
        }

}

 div.module-content.box.statistic ul li a strong span{
     font-size:28px;
 }
 div.module-content.box.statistic ul li a{
    font-size:16px;
}



div#dataset-map-attribution div a{
    font-size: 12px;
}


[data-module="facet-search"] .input-group {
    padding: 10px;
    width: 100%;
}

[data-module="facet-search"]  button {
    outline: none !important;
}

[data-module="facet-search"]  nav {
    height: auto;
    max-height: 50vh;
    overflow: hidden;
    overflow-y: scroll;
    scrollbar-width: thin;
}


[data-module="facet-search"] ul li.search {
    border-left: 1px solid #00847d;
    background-color: #c8e9e842;
}
/* ... */

